--- a/WeddingApp/WeddingApp/App.xaml
+++ b/WeddingApp/WeddingApp/App.xaml
@@ -13,6 +13,7 @@
                 <!--<ResourceDictionary Source="/Resources/XAML/MainResources.xaml" />-->
                 <ResourceDictionary Source="/Resources/XAML/Styles.xaml" />
                 <ResourceDictionary Source="/Resources/XAML/Colors.xaml" />
+                <ResourceDictionary Source="/Resources/XAML/ScrollBar.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
