--- a/WeddingApp/WeddingApp/App.xaml
+++ b/WeddingApp/WeddingApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WeddingApp"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/InvoiceWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -10,7 +10,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
-                <!--<ResourceDictionary Source="/Resources/XAML/MainResources.xaml" />-->
+                <ResourceDictionary Source="/Resources/XAML/MainResources.xaml" />
                 <ResourceDictionary Source="/Resources/XAML/Styles.xaml" />
                 <ResourceDictionary Source="/Resources/XAML/Colors.xaml" />
                 <ResourceDictionary Source="/Resources/XAML/ScrollBar.xaml" />
