--- a/WeddingApp/WeddingApp/Views/UserControls/ControlBarUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/ControlBarUC.xaml
@@ -3,9 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WeddingApp.Views.UserControls"
+             xmlns:local="clr-namespace:WeddingApp.Views.UserControls" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
              x:Name="controlBarUC"
+             DataContext="{StaticResource controlBarVM}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <ControlTemplate x:Key="templateBtn" TargetType="{x:Type Button}">
@@ -34,12 +35,12 @@
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="1">
-            <!--<i:Interaction.Triggers>
+            <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseLeftButtonDown">
                     <i:InvokeCommandAction Command="{Binding MouseMoveWindowCommand}"
                                            CommandParameter="{Binding ElementName=controlBarUC}" />
                 </i:EventTrigger>
-            </i:Interaction.Triggers>-->
+            </i:Interaction.Triggers>
             <Grid x:Name="centerBar"  Visibility="Visible" Height="17" VerticalAlignment="Top">
                 <Border Background="{StaticResource Orange3}"
                         BorderThickness="0"
