--- a/WeddingApp/WeddingApp/Views/UserControls/WeddingListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/WeddingListUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WeddingApp.Views.UserControls.WeddingHallUC"
+﻿<UserControl x:Class="WeddingApp.Views.UserControls.WeddingListUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -20,7 +20,8 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="1.5*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock
                 Text="STT"
@@ -31,7 +32,7 @@
                 Foreground="Black"
                 Grid.Column="0" />
             <TextBlock
-                Text="Tên sảnh"
+                Text="Tên Chú Rễ"
                 FontSize="20"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"
@@ -39,7 +40,7 @@
                 Foreground="Black"
                 Grid.Column="1" />
             <TextBlock
-                Text="Loại sảnh"
+                Text="Tên Cô Dâu"
                 FontSize="20"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"
@@ -47,18 +48,18 @@
                 Foreground="Black"
                 Grid.Column="2" />
             <TextBlock
-                        Text="Số lượng bàn   tối đa"
-                        FontSize="18"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Center"
-                        FontWeight="Medium"
-                        Foreground="Black"
-                        Grid.Column="3"
-                        TextWrapping="Wrap"
-                        TextAlignment="Center"
-                        Padding="0" />
+                    Text="Sảnh"
+                    FontSize="18"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    FontWeight="Medium"
+                    Foreground="Black"
+                    Grid.Column="3"
+                    TextWrapping="Wrap"
+                    TextAlignment="Center"
+                    Padding="0" />
             <TextBlock
-                        Text="Đơn giá bàn tối thiểu"
+                        Text="Ngày"
                         FontSize="18"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
@@ -68,13 +69,23 @@
                         TextWrapping="Wrap"
                         TextAlignment="Center" />
             <TextBlock
-                        Text="Ghi chú"
+                        Text="Giờ"
                         FontSize="18"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         FontWeight="Medium"
                         Foreground="Black"
                         Grid.Column="5"
+                        TextWrapping="Wrap"
+                        TextAlignment="Center" />
+            <TextBlock
+                        Text="Số Lượng"
+                        FontSize="18"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        FontWeight="Medium"
+                        Foreground="Black"
+                        Grid.Column="6"
                         TextWrapping="Wrap"
                         TextAlignment="Center" />
         </Grid>
@@ -88,7 +99,8 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="1.5*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <!--mã sảnh-->
                 <TextBlock
@@ -101,7 +113,7 @@
 
                 <!--tên sảnh-->
                 <TextBlock
-                            Text="Sảnh chính"
+                            Text="Nguyễn Văn Tên Dài Dữ"
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
@@ -111,13 +123,14 @@
                             TextWrapping="Wrap" />
                 <!--Loại sảnh-->
                 <TextBlock
-                            Text="A"
+                            Text="Nguyễn Thị Tên Dài Quá"
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
                             FontWeight="Medium"
                             Foreground="Black"
-                            Grid.Column="2" />
+                            Grid.Column="2"
+                    TextWrapping="Wrap" />
                 <!--SỐ LƯỢNG BÀN TỐI ĐA-->
                 <TextBlock
                             Grid.Column="3"
@@ -134,19 +147,21 @@
                             FontWeight="DemiBold"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center" />
-                <!--GHI CHÚ-->
-                <ScrollViewer Grid.Column="5" Margin="0 0 0 3">
-                    <TextBlock
-                                Text="MỘT ĐOẠN VĂN RẤT DÀIIIIIIIIIIIIIIIIII
-                                IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
-                                IIIIIIIIIIIIIIIII
-                                IIIIII"
-                                FontSize="20"
-                                FontWeight="DemiBold"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                TextWrapping="Wrap" />
-                </ScrollViewer>
+
+                <TextBlock
+                            Grid.Column="5"
+                            Text="10000"
+                            FontSize="20"
+                            FontWeight="DemiBold"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center" />
+                <TextBlock
+                            Grid.Column="6"
+                            Text="10000"
+                            FontSize="20"
+                            FontWeight="DemiBold"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center" />
 
                 <Separator Width="auto" Height="3" Margin="10 0" VerticalAlignment="Bottom" Grid.ColumnSpan="6"></Separator>
             </Grid>
