add detail service list, service selection usercontrol

--- a/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
@@ -91,7 +91,7 @@
                     </ListView>
                 </Border>
                 <uc:DishListUC Grid.Row="2" Visibility="Collapsed" />
-                <uc:ServiceListUC Grid.Row="2" Visibility="Visible" />
+                <uc:DetailServiceListUC Grid.Row="2" Visibility="Visible" />
             </Grid>
             <Rectangle
             Fill="white"
