--- a/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
@@ -117,8 +118,7 @@
                                 </ListView.ItemsPanel>
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
-                                        <Grid x:Name="itemProduct" Margin="10 0"
-                                              Visibility="{Binding ElementName=active, Path=Text, Converter={StaticResource activeToVisibility}}">
+                                        <Grid x:Name="itemProduct" Margin="10 0">
                                             <StackPanel
                                     Width="150" Height="270"
                                     Margin="15 20 15 0">
@@ -156,8 +156,6 @@
                                                 FontWeight="Medium"
                                                 Text="{Binding PRICE_, StringFormat=N0}"
                                                 VerticalAlignment="Center"
-                                                Opacity="{Binding ElementName=discount, Path= Text, Converter={StaticResource doubleToOpacity}}"
-                                                TextDecorations="{Binding ElementName=discount, Path= Text, Converter={StaticResource doubleToTxtDecorations}}"
                                                 Visibility="Visible">
                                                     </TextBlock>
                                                 </Grid>
@@ -167,8 +165,7 @@
                                                 <StackPanel
                                                 x:Name="stack"
                                                 Orientation="Horizontal"
-                                                Margin="10 5"
-                                                Visibility="{Binding ElementName=discount, Path= Text, Converter={StaticResource doubleToVis}}">
+                                                Margin="10 5">
                                                     <TextBlock
                                                 x:Name="priceDiscount"
 
@@ -178,7 +175,7 @@
                                                     FontWeight="Medium"
                                                     VerticalAlignment="Center">
                                                         <TextBlock.Text>
-                                                            <MultiBinding Converter="{StaticResource priceToPriceDiscount}">
+                                                            <MultiBinding>
                                                                 <Binding ElementName="price" Path="Text" />
                                                                 <Binding ElementName="discount" Path="Text" />
                                                             </MultiBinding>
@@ -221,7 +218,6 @@
                                         materialDesign:ButtonAssist.CornerRadius="10"
                                         HorizontalContentAlignment="Stretch"
                                         VerticalAlignment="Bottom"
-                                        Command="{Binding Source={StaticResource CreateOrderVM}, Path=AddToCartCommand}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
                                                 <Button.Content>
                                                     <Grid>
@@ -283,7 +279,7 @@
                         </Grid>
                         <Grid Grid.Row="1" Grid.RowSpan="2" Margin="10 0">
                             <ScrollViewer>
-                                <ListView x:Name="carts" ScrollViewer.CanContentScroll="False" ItemsSource="{Binding Source={StaticResource CreateOrderVM}, Path=CurrentCart, UpdateSourceTrigger=PropertyChanged}">
+                                <ListView x:Name="carts" ScrollViewer.CanContentScroll="False">
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
                                             <Grid Width="310" Height="100" Margin="0 0 20 0">
@@ -303,7 +299,6 @@
                                                     HorizontalAlignment="Center"
                                                     VerticalAlignment="Center"
                                                     Visibility="Collapsed"
-                                                    Command="{Binding Source={StaticResource CreateOrderVM}, Path=DeleteCartCommand}"
                                                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}" />
                                                 </Grid>
                                                 <Grid Grid.Column="1" Margin="0 10">
@@ -373,7 +368,6 @@
                                                                     VerticalContentAlignment="Center"
                                                                     HorizontalContentAlignment="Center"
                                                                     FontSize="16"
-                                                                    Command="{Binding Source={StaticResource CreateOrderVM}, Path=DownCommand}"
                                                                     CommandParameter="{Binding ElementName=amount}" />
                                                                     <Button
                                                                     Style="{StaticResource up_down_spinner_btn}"
@@ -490,7 +484,6 @@
                             </StackPanel>
                             <Button
                             Style="{StaticResource SearchBtn}"
-                            Command="{Binding Source={StaticResource CreateOrderVM}, Path=OrderCommand}"
                             CommandParameter="{Binding ElementName=CreateOrderWD}"
                             VerticalAlignment="Bottom"
                             materialDesign:ButtonAssist.CornerRadius="5"
