--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/EditDishUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/EditDishUC.xaml
@@ -104,19 +104,17 @@
 
                                     <!--button xoá sửa-->
                                     <StackPanel Orientation="Horizontal" Grid.Column="4">
-                                        <Button Style="{StaticResource editBtn}"
-                                        VerticalAlignment="Center"
-                                        x:Name="editbtn"
-                                        HorizontalAlignment="Center"
-                                        Margin="60 0 0 0"
-                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
+                                        <Button
+                                          Style="{StaticResource MaterialDesignIconForegroundButton}"
+                                          ToolTip="Chỉnh sửa món ăn"
+                                          IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
+                                            <materialDesign:PackIcon Kind="Edit" Height="30" Width="30" />
                                         </Button>
-                                        <Button Style="{StaticResource deleteBtn}"
-                                        VerticalAlignment="Center"
-                                        HorizontalAlignment="Center"
-                                        x:Name="deletebtn"
-                                        Margin="50 0 0 0"
-                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
+                                        <Button
+                                          Style="{StaticResource MaterialDesignIconForegroundButton}"
+                                          ToolTip="Xoá món ăn"
+                                          IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
+                                            <materialDesign:PackIcon Kind="Delete" Height="30" Width="30" />
                                         </Button>
                                     </StackPanel>
                                 </Grid>
