--- a/WeddingApp/WeddingApp/Views/InvoiceWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/InvoiceWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:WeddingApp.Views" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
+        xmlns:local="clr-namespace:WeddingApp.Views"
+        xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         mc:Ignorable="d"
         MinHeight="600" Width="800"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
