--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -2,4 +2,5 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewmodels="clr-namespace:WeddingApp.ViewModels">
     <viewmodels:ControlBarVM x:Key="controlBarVM"></viewmodels:ControlBarVM>
+    <viewmodels:DashBoardVM x:Key="dashBoardVM"></viewmodels:DashBoardVM>
 </ResourceDictionary>
