--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/DashBoardUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/DashBoardUC.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             DataContext="{StaticResource dashBoardVM}"
              mc:Ignorable="d"
              Height="710"
              Width="1120">
@@ -27,7 +29,7 @@
                         <ListViewItem.Template>
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
                                 <Border Height="40" Width="150" x:Name="border" BorderBrush="Transparent" BorderThickness="0 0 0 4" Margin="20 0">
-                                    <TextBlock x:Name="text" Text="Món ăn" TextAlignment="Center" VerticalAlignment="Center" FontSize="20"></TextBlock>
+                                    <TextBlock x:Name="text" Text="Tháng" TextAlignment="Center" VerticalAlignment="Center" FontSize="20"></TextBlock>
                                 </Border>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
@@ -47,7 +49,7 @@
                         <ListViewItem.Template>
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
                                 <Border Height="40" Width="160" x:Name="border" BorderBrush="Transparent" BorderThickness="0 0 0 4" Margin="20 0">
-                                    <TextBlock x:Name="text" Text="Dịch vụ" TextAlignment="Center" VerticalAlignment="Center" FontSize="20"></TextBlock>
+                                    <TextBlock x:Name="text" Text="Năm" TextAlignment="Center" VerticalAlignment="Center" FontSize="20"></TextBlock>
                                 </Border>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
@@ -72,12 +74,12 @@
                 </Grid.ColumnDefinitions>
                 <StackPanel>
                     <Grid Margin="0 10 0 0">
-                        <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
+                        <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
                             </Rectangle.Effect>
                         </Rectangle>
-                        <Grid Margin="25" Height="120">
+                        <Grid Margin="25">
                             <Border CornerRadius="0 0 10 10" Background="{StaticResource Orange1}"
                             Width="40" Height="50"
                             HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -95,13 +97,13 @@
                                Margin="10 10 5 15" FontSize="30" />
                         </Grid>
                     </Grid>
-                    <Grid>
-                        <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
+                    <Grid Margin="0 10">
+                        <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
                             </Rectangle.Effect>
                         </Rectangle>
-                        <Grid Margin="25" Height="120">
+                        <Grid Margin="25">
                             <Border CornerRadius="0 0 10 10" Background="Gold" Width="40" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15 0">
 
                                 <materialDesign:PackIcon Kind="Cart" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="25" Height="25" />
@@ -113,31 +115,14 @@
                                Margin="20 10" FontSize="40" />
                         </Grid>
                     </Grid>
-                    <Grid>
-                        <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
+
+                    <Grid Margin="0 10">
+                        <Rectangle Height="140" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
                             </Rectangle.Effect>
                         </Rectangle>
-                        <Grid Margin="25" Height="120">
-                            <Border CornerRadius="0 0 10 10" Background="BlueViolet" Width="40" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15 0">
-
-                                <materialDesign:PackIcon Kind="Food" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="25" Height="25" />
-                            </Border>
-                            <TextBlock Text="Số món ăn" FontWeight="Bold" HorizontalAlignment="Right" Margin="15" FontSize="24" VerticalAlignment="Top" />
-
-                            <TextBlock Text="{Binding TotalProduct, StringFormat=N0}"
-                               HorizontalAlignment="Right" VerticalAlignment="Bottom"
-                               Margin="10" FontSize="40" />
-                        </Grid>
-                    </Grid>
-                    <Grid>
-                        <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
-                            <Rectangle.Effect>
-                                <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1" />
-                            </Rectangle.Effect>
-                        </Rectangle>
-                        <Grid Margin="25" Height="120">
+                        <Grid Margin="25">
                             <Border CornerRadius="0 0 10 10"
                             Background="LawnGreen" Width="40" Height="50"
                             HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15 0">
@@ -155,15 +140,16 @@
                     </Grid>
                 </StackPanel>
                 <Grid Grid.Column="1">
-                    <lvc:ColumnSeries
-                        Margin="30">
-                        <lvc:ColumnSeries.DataLabelsTemplate>
-                            <lvc: Title="Doanh thu" LabelFormatter="{Binding YFormatter}" ></lvc:<Unknown>>
-                        </lvc:ColumnSeries.DataLabelsTemplate>
-                        <lvc:ColumnSeries.DataLabelsTemplate>
-                            <lvc:Axis Title="Ngày" Labels="{Binding Labels}"></lvc:Axis>
-                        </lvc:ColumnSeries.DataLabelsTemplate>
-                    </lvc:ColumnSeries>
+                    <lvc:CartesianChart Series="{Binding SeriesCollection}"
+                                        LegendLocation="Right"
+                                        Margin="30">
+                        <lvc:CartesianChart.AxisX>
+                            <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
+                        </lvc:CartesianChart.AxisX>
+                        <lvc:CartesianChart.AxisY>
+                            <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                        </lvc:CartesianChart.AxisY>
+                    </lvc:CartesianChart>
                     <Rectangle
                 Fill="White"
                 HorizontalAlignment="Stretch"
