--- a/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="WeddingApp.Views.AddDishWindow"
+﻿<Window x:Class="WeddingApp.Views.EditDishWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeddingApp.Views"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         mc:Ignorable="d"
-        Title="AddDishWindow" Height="600" Width="800"
+        Title="EditDishWindow"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
+        Height="600" Width="800"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -32,7 +34,7 @@
                     <RowDefinition Height="0.4*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <uc:ControlBarUC x:Name="controlBar" Grid.Row="0" Grid.ColumnSpan="2"></uc:ControlBarUC>
-                <TextBlock Text="Thêm món ăn"
+                <TextBlock Text="Cập nhật món ăn"
                        Margin="0 10 0 0"
                            VerticalAlignment="Bottom"
                            HorizontalAlignment="Center"
@@ -198,7 +200,7 @@
                         HorizontalAlignment="Right">
                     <Button
                 Style="{StaticResource GreenBtn}"
-                Content="Thêm"
+                Content="Cập nhật"
                 x:Name="addbtn"
                 Width="120"
                 Height="50"
