--- a/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
@@ -44,9 +44,11 @@
                            Grid.Column="0"
                        Grid.ColumnSpan="2"></TextBlock>
                 <!--tên, giá, khuyến mãi-->
-                <StackPanel Orientation="Vertical" Grid.Row="1" Margin="40 30 0 0">
+                <StackPanel Orientation="Vertical" Grid.Row="1"
+                            Margin="40 30 0 0"
+                            VerticalAlignment="Center">
                     <!--tên món ăn-->
-                    <StackPanel Orientation="Horizontal" Margin="0">
+                    <StackPanel Orientation="Horizontal" Margin="0 20">
                         <materialDesign:PackIcon
                                     Kind="Food"
                                     Width="30"
@@ -93,36 +95,6 @@
                                 Height="50"
                                 Padding="2,0,0,0">
                         </TextBox>
-                    </StackPanel>
-                    <!--khuyến mãi-->
-                    <StackPanel Orientation="Horizontal" Margin="0 10">
-                        <materialDesign:PackIcon
-                                    Kind="Discount"
-                                    Width="30"
-                                    Height="30"
-                                    Foreground="{StaticResource Gray}"
-                                    VerticalAlignment="Center"
-                                    Margin="10,10,20,-10" />
-                        <TextBox
-
-                                materialDesign:HintAssist.Hint="Khuyến mãi"
-                                Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                x:Name="txtDiscount"
-                                Foreground="Black"
-                                FontSize="16"
-                                FontWeight="Medium"
-                                materialDesign:HintAssist.Foreground="{StaticResource Gray}"
-                                materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
-                                Width="100"
-                                VerticalContentAlignment="Center"
-                                Height="50"
-                                Padding="2,0,0,0">
-                        </TextBox>
-                        <TextBlock
-                        Margin="0 10 0 0"
-                        VerticalAlignment="Center"
-                        FontSize="20"
-                        FontWeight="Bold">%</TextBlock>
                     </StackPanel>
                 </StackPanel>
                 <!--chọn hình món ăn-->
