--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/DishListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/DishListUC.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="WeddingApp.Views.UserControls.Admin.EditDishUC"
+﻿<UserControl x:Class="WeddingApp.Views.UserControls.Admin.DishListUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=SlideInFromRight,Duration=0:0:0.5}">
