--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/ServiceListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/ServiceListUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WeddingApp.Views.UserControls.Admin.EditServiceUC"
+﻿<UserControl x:Class="WeddingApp.Views.UserControls.Admin.ServiceListUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
