--- a/WeddingApp/WeddingApp/Views/CustomMessageBoxWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/CustomMessageBoxWindow.xaml
@@ -62,7 +62,8 @@
                             materialDesign:ButtonAssist.CornerRadius="10"
                             Width="100"
                             Height="25"
-                            Margin="0 0 20 0" Click="btn_OK_Click"
+                            Margin="0 0 20 0" 
+                            Click="btn_OK_Click"
                             Visibility="Collapsed" />
                         <Button
                             x:Name="btn_Cancel"
@@ -72,7 +73,8 @@
                             Width="100"
                             Height="25"
                             Margin="0 0 20 0"
-                            Visibility="Collapsed" Click="btn_Cancel_Click" />
+                            Visibility="Collapsed" 
+                            Click="btn_Cancel_Click" />
                     </StackPanel>
                 </Grid>
             </Grid>
