--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -3,4 +3,5 @@
                     xmlns:viewmodels="clr-namespace:WeddingApp.ViewModels">
     <viewmodels:ControlBarVM x:Key="controlBarVM"></viewmodels:ControlBarVM>
     <viewmodels:DashBoardVM x:Key="dashBoardVM"></viewmodels:DashBoardVM>
+    <viewmodels:EmployeeListVM x:Key="employeeListVM"></viewmodels:EmployeeListVM>
 </ResourceDictionary>
