--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/EmployeeListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/EmployeeListUC.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="WeddingApp.Views.UserControls.Admin.EmployeeListUC"
+             x:Name="employeeListUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -58,8 +59,8 @@
                     VerticalAlignment="Center"
                     Grid.Column="3"
                     Margin="0 10 0 0"
-                    Command="{Binding AddEmployeeCommand}"
-                    CommandParameter="{Binding ElementName= EditUC}" />
+                    Command="{Binding OpenAddEmployeeWindowCommand}"
+                    CommandParameter="{Binding ElementName=employeeListUC}"/>
                 </Grid>
                 <!--header-->
 
